--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/date-fns": "^2.6.3",
+    "@types/hls.js": "^1.0.0",
     "@types/react-slick": "^0.23.13",
+    "artplayer": "^5.2.2",
+    "artplayer-plugin-ambilight": "^1.0.0",
+    "artplayer-plugin-hls-control": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
@@ -23,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-player": "^2.16.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
