--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@types/cors": "^2.8.17",
     "@types/date-fns": "^2.6.3",
     "@types/hls.js": "^1.0.0",
+    "@types/node-fetch": "^2.6.12",
     "@types/react-slick": "^0.23.13",
     "artplayer": "^5.2.2",
     "artplayer-plugin-ambilight": "^1.0.0",
     "artplayer-plugin-hls-control": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
+    "node-fetch": "2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
